--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <th>Name</th>
     <th>Wins</th>
     <th>Losses</th>
-    <th>Win %</th>
+    <th class="non-essential">Win %</th>
     <th>Rating</th>
   </tr>
 
@@ -14,9 +14,9 @@
       <td><%= player.wins %></td>
       <td><%= player.losses %></td>
       <% if player.wins + player.losses == 0 %>
-        <td>00.0%</td>
+        <td class="non-essential">00.0%</td>
       <% else %>
-        <td><%= number_to_percentage((player.wins.to_f / (player.wins + player.losses).to_f).to_f * 100, :precision => 1) %></td>
+        <td class="non-essential"><%= number_to_percentage((player.wins.to_f / (player.wins + player.losses).to_f).to_f * 100, :precision => 1) %></td>
       <% end %>
       <td><%= player.rating %></td>
     </tr>
