Changed css to cover handhelds only instead of such large screen for removing players

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   body {
     background-color: #FFFFFF;
   }
-  @media all and (max-width: 980px) {
+  @media handheld {
     .not-essential {
       display: none;
     }
