--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require twitter/bootstrap
  *= require twitter/bootstrap-responsive
+ *= require results
  *= require_self
  *= require_tree .
  */
