--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Results controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.doubles_control {
+  display: inline;
+  margin-left: 60px !important;
+}
+
+.doubles_label {
+  display: inline;
+  margin-right: 30px !important;
+}
