--- a/app/views/results/_singles_form.html.erb
+++ b/app/views/results/_singles_form.html.erb
@@ -1,5 +1,3 @@
-<div class="row span8" style="margin-left:0px;">
-<h3>Report a new game</h3>
 <p>Shuffleboard ladder games are one on one battles, first to 11 wins</p>
 
 <%= form_for(@result, :html => { :class => "form-horizontal" }) do |f| %>
@@ -40,7 +38,6 @@
     </div>
   </div>
   <div class="actions">
-    <%= f.submit 'Submit', :class => 'btn btn-primary' %>
+    <%= f.submit 'Submit', :class => 'btn btn-info' %>
   </div>
 <% end %>
-</div>
