Set routes for ResultDoubles to Result stuff and fixed up all the UI for submitting results. Also did admin stuff for doubles results

--- a/app/views/results/_doubles_form.html.erb
+++ b/app/views/results/_doubles_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+<%= f.hidden_field :type, :value => "ResultDoubles" %>
+
   <div class="clearfix purp-sep"></div>
   <div class="control-group">
     <%= f.label :home_player_id, "Home team", :class => "controls-label doubles_label" %>
