Removed the auto page refresh from all pages but the home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="60" />
+  <% if content_for? :for_head %>
+    <%= yield :for_head %>
+  <% end %>
 <style type='text/css'>
   body {
     background-color: #FFFFFF;
