--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :for_head do %>
+  <meta http-equiv="refresh" content="60" />
+<% end %>
+
 <div class="row span8" style="margin-left:0px;">
 <table class="table table-hover">
   <tr>
