Both singles and doubles were set to visible by default in the player show

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -57,7 +57,7 @@
       <% end %>
     </table>
   </div>
-  <div class="tab-pane active" id="doubles">
+  <div class="tab-pane" id="doubles">
     <table class="table table-hover">
       <tr>
         <th>Home Player</th>
