--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
 <div class="container">
 <div class="row" style="margin-bottom: 10px">
   <div class="span3">
-    <img src="<%= asset_path('cOsO.png') %>" style="padding-bottom: 5px;">
+    <img src="<%= asset_path('logo.png') %>" style="padding-bottom: 5px;">
   </div>
   <div class="span6 offset1">
-    <h1><span class="not-essential">ConnectSolutions </span>Shuffleboard</h1>
+    <h1><span class="not-essential">NexGen </span>Shuffleboard</h1>
   </div>
 </div>
 <div class="row span8" style="margin-left:0px">
