--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -1,1 +1,1 @@
-<h3>Error, try something else and report to matt@connectsolutions.com</h3>
+<h3>Error, try something else and report to info@nexgengolfcenter.com</h3>
