--- a/app/views/results/_singles_form.html.erb
+++ b/app/views/results/_singles_form.html.erb
@@ -1,4 +1,4 @@
-<p>Shuffleboard ladder games are one on one battles, first to 11 wins</p>
+<p>Singles games are one on one battles, first to 11 wins</p>
 
 <%= form_for(@result.becomes(Result), :html => { :class => "form-horizontal" }) do |f| %>
   <% if @result.errors.any? %>
