--- a/app/views/results/_doubles_form.html.erb
+++ b/app/views/results/_doubles_form.html.erb
@@ -1,4 +1,4 @@
-<p>Shuffleboard ladder doubles games are two on two battles, first to 15 wins</p>
+<p>Doubles games are two on two battles, first to 15 wins</p>
 
 <%= form_for(@result.becomes(Result), :html => { :class => "form-horizontal" }) do |f| %>
   <% if @result.errors.any? %>
